ontol/ontol-compiler/test-cases/error/map/invalid_unit_rel_params.on
def foo (rel* 'foo': text)
def bar (rel* 'bar': text)

map(
    foo(
        'foo'
            ['bug': b] // ERROR no relation parameters expected
            : s
    ),
    bar('bar': s)
)
